gcc/testsuite/gdc.test/compilable/b17651.d
// REQUIRED_ARGS: -c -D -Ddtest_results/compilable
/**
Macros:
Escapes=/a/b/
*/
void foo() {}
